--- a/restaurants/templates/list.html
+++ b/restaurants/templates/list.html
@@ -4,10 +4,18 @@
 
 {% block content %}
 <br>
+
+  <form class="form-inline"  action="{% url 'restaurant-list' %}">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search" name="q">
+    <button class="btn btn-outline-success" type="submit">Search</button>
+  </form>
+
+
 <div class="row">
     {% for restaurant in restaurants %}
     <div class="col-md-4">
         <div class="card my-card">
+
           {% if restaurant.logo %}
             <img class="card-img-top" src="{{restaurant.logo.url}}" alt="Hey Noob, look at me...">
           {% endif %}
