--- a/restaurants/templates/list.html
+++ b/restaurants/templates/list.html
@@ -6,7 +6,7 @@
 <br>
 
   <form class="form-inline"  action="{% url 'restaurant-list' %}">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" name="q">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search" value = {{q}} name="q">
     <button class="btn btn-outline-success" type="submit">Search</button>
   </form>
 
